<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TourID</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_bookmark">Bookmarks</string>
    <string name="title_person">Account</string>
    <string name="min_temp">Min</string>
    <string name="max_temp">Max</string>
    <string name="city_title">City</string>
    <string name="temp">Temperature</string>
    <string name="destination_name">Destination Name</string>
    <string name="destination_location">Destination Location</string>
    <string name="destination_rating">Destination Rating</string>
    <string name="search_hint" tools:ignore="TypographyEllipsis">looking something...</string>
    <string name="save_bookmark">Save Bookmark</string>
    <string name="default_web_client_id" tools:ignore="TypographyDashes">223829109607-agjcuis3d3t9c3br4virlh4np46kta91.apps.googleusercontent.com</string>
    <string name="All">All</string>
    <string name="Budaya">Budaya</string>
    <string name="Bahari">Bahari</string>
    <string name="Cagara">Cagar Alam</string>
    <string name="perbelanjaan">Pusat Perbelanjaan</string>
    <string name="hiburan">Taman Hiburan</string>
    <string name="ibadah">Tempat Ibadah</string>
    <string name="Lewati"><u>Lewati</u></string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="retry">Try Again</string>
    <string name="weather_icon">Icon Weather</string>
    <string name="weather_description">Desc Weather</string>
    <string name="temperature">%.1f°C</string>
    <string name="min_temperature">Min: %.1f°C</string>
    <string name="max_temperature">Max: %.1f°C</string>
    <string name="dummy_description">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
</resources>