<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit2024.tourid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_firstFragment_to_secondFragment"
            app:destination="@id/navigation_search"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.bangkit2024.tourid.ui.search.DashboardFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_secondFragment_to_thirdFragment"
            app:destination="@id/navigation_bookmark"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.bangkit2024.tourid.ui.bookmarks.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmarks" />
</navigation>