<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/shadow_bg"
        android:paddingTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <TextView
            android:id="@+id/title_search"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginBottom="2dp"
            android:layout_marginHorizontal="26dp"
            android:text="Search"
            android:textSize="22sp" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_feature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            app:iconifiedByDefault="false"
            android:background="@drawable/searchview_bg"
            android:backgroundTint="@color/white_80"
            app:queryHint="@string/search_hint" />

    </com.google.android.material.appbar.AppBarLayout>

    <HorizontalScrollView
        android:id="@+id/container_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_category_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/All"
                android:textSize="12sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_category_bahari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/Bahari"
                android:textSize="12sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_category_budaya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/Budaya"
                android:textSize="12sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_category_cagara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/Cagara"
                android:textSize="12sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_category_perbelanjaan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/perbelanjaan"
                android:textSize="12sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_category_ibadah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/ibadah"
                android:textSize="12sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_category_hiburan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/hiburan"
                android:textSize="12sp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </HorizontalScrollView>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/container_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"/>

    <TextView
        android:id="@+id/title_searchh_destination"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:text="Popular Destination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_searchh_destination"
        tools:listitem="@layout/item_row_destination" />

    <ProgressBar
        android:id="@+id/pb_search"
        style="?android:attr/progressBarStyle"
        android:layout_width="90dp"
        android:layout_height="84dp"
        android:indeterminateBehavior="repeat"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
